--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
         "@mantine/hooks": "^7.0.0-beta.2",
         "@mantine/notifications": "^7.0.0-beta.2",
         "@rainbow-me/rainbowkit": "^1",
+        "@react-spring/web": "^9.7.3",
         "abitype": "^0.9",
         "encoding": "^0.1",
         "graphql": "^16",
