--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     },
     "devDependencies": {
         "@cartesi/rollups": "^1.0",
+        "@cartesi/tsconfig": "workspace:*",
         "@graphql-codegen/cli": "^5",
         "@graphql-codegen/client-preset": "^4",
         "@graphql-codegen/typed-document-node": "^5",
@@ -50,7 +51,7 @@
         "@types/react-dom": "^18",
         "@wagmi/cli": "^1",
         "eslint": "^8",
-        "eslint-config-next": "^13",
+        "eslint-config-cartesi": "workspace:*",
         "npm-run-all": "^4",
         "postcss": "^8",
         "postcss-preset-mantine": "^1.6",
