--- a/apps/web/codegen.yaml
+++ b/apps/web/codegen.yaml
@@ -5,6 +5,8 @@ generates:
         config:
             withHooks: true
         plugins:
+            - add:
+                  content: 'import type { DocumentNode } from "graphql/language/ast";'
             - typescript
             - typescript-operations
             - typescript-urql
