--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,24 +1,7 @@
 {
+    "extends": "@cartesi/tsconfig/nextjs.json",
     "compilerOptions": {
-        "target": "ESNext",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "noEmit": true,
-        "esModuleInterop": true,
-        "module": "ESNext",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "jsx": "preserve",
-        "incremental": true,
-        "plugins": [
-            {
-                "name": "next"
-            }
-        ]
+        "plugins": [{ "name": "next" }]
     },
     "include": [
         "next-env.d.ts",
