--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,20 +3,21 @@
     "private": true,
     "version": "0.0.0",
     "scripts": {
+        "build": "next build",
+        "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
         "codegen": "run-p codegen:graphql codegen:wagmi",
         "codegen:graphql": "graphql-codegen",
         "codegen:wagmi": "wagmi generate",
         "dev": "next dev",
-        "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
-        "@mantine/code-highlight": "^7.0.0-beta.2",
-        "@mantine/core": "^7.0.0-beta.2",
-        "@mantine/form": "^7.0.0-beta.2",
-        "@mantine/hooks": "^7.0.0-beta.2",
-        "@mantine/notifications": "^7.0.0-beta.2",
+        "@cartesi/rollups-explorer-ui": "workspace:*",
+        "@mantine/core": "^7.0.0-beta.3",
+        "@mantine/form": "^7.0.0-beta.3",
+        "@mantine/hooks": "^7.0.0-beta.3",
+        "@mantine/notifications": "^7.0.0-beta.3",
         "@rainbow-me/rainbowkit": "^1",
         "@react-spring/web": "^9.7.3",
         "abitype": "^0.9",
@@ -38,6 +39,7 @@
     "devDependencies": {
         "@cartesi/rollups": "^1.0",
         "@cartesi/tsconfig": "workspace:*",
+        "@graphql-codegen/add": "^5",
         "@graphql-codegen/cli": "^5",
         "@graphql-codegen/client-preset": "^4",
         "@graphql-codegen/typed-document-node": "^5",
