--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -5,6 +5,12 @@
 /.pnp
 .pnp.js
 
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # testing
 /coverage
 
