--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
         "next": "^13",
         "pino-pretty": "^10",
         "pretty-ms": "^8",
+        "ramda": "^0.29.0",
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^4",
@@ -49,6 +50,7 @@
         "@graphql-typed-document-node/core": "^3",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
         "@types/node": "^20",
+        "@types/ramda": "^0.29.3",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@wagmi/cli": "^1",
