--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,20 +3,21 @@
     "private": true,
     "version": "0.0.0",
     "scripts": {
+        "build": "next build",
+        "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
         "codegen": "run-p codegen:graphql codegen:wagmi",
         "codegen:graphql": "graphql-codegen",
         "codegen:wagmi": "wagmi generate",
         "dev": "next dev",
-        "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
-        "@mantine/code-highlight": "^7.0.0-beta.2",
-        "@mantine/core": "^7.0.0-beta.2",
-        "@mantine/form": "^7.0.0-beta.2",
-        "@mantine/hooks": "^7.0.0-beta.2",
-        "@mantine/notifications": "^7.0.0-beta.2",
+        "@cartesi/rollups-explorer-ui": "workspace:*",
+        "@mantine/core": "^7.0.0-beta.3",
+        "@mantine/form": "^7.0.0-beta.3",
+        "@mantine/hooks": "^7.0.0-beta.3",
+        "@mantine/notifications": "^7.0.0-beta.3",
         "@rainbow-me/rainbowkit": "^1",
         "@react-spring/web": "^9.7.3",
         "abitype": "^0.9",
@@ -27,6 +28,7 @@
         "next": "^13",
         "pino-pretty": "^10",
         "pretty-ms": "^8",
+        "ramda": "^0.29.0",
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^4",
@@ -37,6 +39,8 @@
     },
     "devDependencies": {
         "@cartesi/rollups": "^1.0",
+        "@cartesi/tsconfig": "workspace:*",
+        "@graphql-codegen/add": "^5",
         "@graphql-codegen/cli": "^5",
         "@graphql-codegen/client-preset": "^4",
         "@graphql-codegen/typed-document-node": "^5",
@@ -46,11 +50,12 @@
         "@graphql-typed-document-node/core": "^3",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
         "@types/node": "^20",
+        "@types/ramda": "^0.29.3",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@wagmi/cli": "^1",
         "eslint": "^8",
-        "eslint-config-next": "^13",
+        "eslint-config-cartesi": "workspace:*",
         "npm-run-all": "^4",
         "postcss": "^8",
         "postcss-preset-mantine": "^1.6",
