--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+    "name": "rollups-explorer",
+    "version": "0.1.0",
+    "private": true,
     "scripts": {
-        "build": "turbo run build"
+        "build": "turbo run build",
+        "dev": "turbo run dev --no-cache --continue",
+        "lint": "turbo run lint",
+        "clean": "turbo run clean && rm -rf node_modules",
+        "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+        "changeset": "changeset",
+        "version-packages": "changeset version",
+        "release": "turbo run build && changeset publish"
     },
     "devDependencies": {
+        "eslint-config-cartesi": "workspace:*",
         "prettier": "^3.0.3",
         "turbo": "^1.10.13",
         "@changesets/cli": "^2.26.2"
@@ -10,8 +21,5 @@
     "engines": {
         "node": ">=18.0.0"
     },
-    "packageManager": "pnpm@8.6.10",
-    "name": "rollups-explorer",
-    "version": "0.1.0",
-    "private": true
+    "packageManager": "pnpm@8.7.1"
 }
