--- a/turbo.json
+++ b/turbo.json
@@ -1,26 +1,35 @@
 {
     "$schema": "https://turbo.build/schema.json",
+    "globalEnv": ["NEXT_PUBLIC_ENABLE_TESTNETS"],
     "pipeline": {
+        "build": {
+            "dependsOn": ["^build", "codegen"],
+            "outputs": [
+                ".next/**",
+                "!.next/cache/**",
+                "dist",
+                "storybook-static/**"
+            ]
+        },
+        "clean": {
+            "cache": false
+        },
         "codegen": {
             "outputs": ["src/graphql/**", "src/contracts.ts"]
         },
-        "build": {
-            "dependsOn": ["^build", "codegen"],
-            "outputs": [".next/**", "!.next/cache/**", "dist"]
-        },
-        "test": {
-            "dependsOn": ["build"],
-            "inputs": [
-                "src/**/*.tsx",
-                "src/**/*.ts",
-                "test/**/*.ts",
-                "test/**/*.tsx"
-            ]
-        },
-        "lint": {},
         "dev": {
             "cache": false,
             "persistent": true
+        },
+        "lint": {},
+        "test": {
+            "dependsOn": ["build"],
+            "inputs": [
+                "src/**/*.ts",
+                "src/**/*.tsx",
+                "test/**/*.ts",
+                "test/**/*.tsx"
+            ]
         }
     }
 }
