--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://turbo.build/schema.json",
-    "globalEnv": ["NEXT_PUBLIC_ENABLE_TESTNETS"],
+    "globalEnv": ["NEXT_PUBLIC_ENABLE_TESTNETS", "NEXT_PUBLIC_BE_GRAPHQL_URL"],
     "pipeline": {
         "build": {
             "dependsOn": ["^build", "codegen"],
