--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -27,6 +27,7 @@
         "@storybook/addon-links": "^7.4.0",
         "@storybook/addon-onboarding": "^1.0.8",
         "@storybook/addon-styling": "^1.3.7",
+        "@storybook/addon-viewport": "^7.4.0",
         "@storybook/blocks": "^7.4.0",
         "@storybook/cli": "^7.4.0",
         "@storybook/preview-api": "^7.4.0",
