chore: Add dotenv-cli as dev deps

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
         "build": "next build",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
         "codegen": "run-p codegen:graphql codegen:wagmi",
-        "codegen:graphql": "graphql-codegen",
+        "codegen:graphql": "dotenv -e .env -c -- graphql-codegen",
         "codegen:wagmi": "wagmi generate",
         "dev": "next dev",
         "start": "next start",
@@ -54,6 +54,7 @@
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@wagmi/cli": "^1",
+        "dotenv-cli": "7.3.0",
         "eslint": "^8",
         "eslint-config-cartesi": "workspace:*",
         "npm-run-all": "^4",
