--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,9 @@
 {
     "$schema": "https://turbo.build/schema.json",
-    "globalEnv": ["NEXT_PUBLIC_ENABLE_TESTNETS", "NEXT_PUBLIC_BE_GRAPHQL_URL"],
+    "globalEnv": [
+        "NEXT_PUBLIC_ENABLE_TESTNETS",
+        "NEXT_PUBLIC_EXPLORER_API_URL"
+    ],
     "pipeline": {
         "build": {
             "dependsOn": ["^build", "codegen"],
@@ -18,6 +21,7 @@
             "outputs": ["src/graphql/**", "src/contracts.ts"]
         },
         "dev": {
+            "dependsOn": ["codegen"],
             "cache": false,
             "persistent": true
         },
