--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,8 @@
     "sideEffects": false,
     "license": "Apache-2.0",
     "files": [
-        "dist/**"
+        "dist",
+        "src"
     ],
     "scripts": {
         "build": "tsup",
