Fix output glob pattern

--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
             "outputs": [
                 ".next/**",
                 "!.next/cache/**",
-                "dist",
+                "dist/**",
                 "storybook-static/**"
             ]
         },
