--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,7 @@
             "outputs": [
                 ".next/**",
                 "!.next/cache/**",
-                "dist",
+                "dist/**",
                 "storybook-static/**"
             ]
         },
