--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,12 @@
 {
-    "tabWidth": 4
+    "tabWidth": 4,
+    "overrides": [
+        {
+            "files": "*.md",
+            "options": {
+                "tabWidth": 1,
+                "bracketSpacing": false
+            }
+        }
+    ]
 }
