--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,13 +13,13 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@cartesi/rollups-explorer-ui": "workspace:*",
-        "@mantine/core": "^7.0.0-beta.5",
-        "@mantine/form": "^7.0.0-beta.5",
-        "@mantine/hooks": "^7.0.0-beta.5",
-        "@mantine/notifications": "^7.0.0-beta.5",
-        "@rainbow-me/rainbowkit": "^1.0.11",
-        "@react-spring/web": "^9.7.3",
+        "@cartesi/rollups-explorer-ui": "*",
+        "@mantine/core": "^7",
+        "@mantine/form": "^7",
+        "@mantine/hooks": "^7",
+        "@mantine/notifications": "^7",
+        "@rainbow-me/rainbowkit": "^1",
+        "@react-spring/web": "^9",
         "abitype": "^0.9",
         "encoding": "^0.1",
         "graphql": "^16",
@@ -39,7 +39,7 @@
     },
     "devDependencies": {
         "@cartesi/rollups": "^1.0",
-        "@cartesi/tsconfig": "workspace:*",
+        "@cartesi/tsconfig": "*",
         "@graphql-codegen/add": "^5",
         "@graphql-codegen/cli": "^5",
         "@graphql-codegen/client-preset": "^4",
@@ -56,7 +56,7 @@
         "@wagmi/cli": "^1",
         "dotenv-cli": "7.3.0",
         "eslint": "^8",
-        "eslint-config-cartesi": "workspace:*",
+        "eslint-config-cartesi": "*",
         "npm-run-all": "^4",
         "postcss": "^8",
         "postcss-preset-mantine": "^1.6",
