--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
         "release": "turbo run build && changeset publish"
     },
     "devDependencies": {
-        "eslint-config-cartesi": "workspace:*",
+        "@changesets/cli": "^2.26.2",
         "prettier": "^3.0.3",
-        "turbo": "^1.10.13",
-        "@changesets/cli": "^2.26.2"
+        "turbo": "^1.10.13"
     },
     "engines": {
         "node": ">=18.0.0"
     },
-    "packageManager": "pnpm@8.7.5"
+    "workspaces": [
+        "apps/*",
+        "packages/*"
+    ]
 }
