--- a/packages/eslint-config-cartesi/package.json
+++ b/packages/eslint-config-cartesi/package.json
@@ -6,8 +6,8 @@
     "private": true,
     "dependencies": {
         "eslint-config-next": "latest",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-react": "7.29.4",
+        "eslint-config-prettier": "^9",
+        "eslint-plugin-react": "^7",
         "eslint-config-turbo": "latest",
         "typescript": "^5"
     }
