Migrate from yarn classic to yarn modern

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 .turbo
 .next
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 dist
 node_modules
 storybook-static
