Yarn classic configuration

--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -11,7 +11,7 @@
         "preview": "serve storybook-static"
     },
     "dependencies": {
-        "@cartesi/rollups-explorer-ui": "workspace:*",
+        "@cartesi/rollups-explorer-ui": "*",
         "@mantine/core": "^7.0.0-beta.5",
         "@mantine/hooks": "^7.0.0-beta.5",
         "react": "^18.2.0",
@@ -19,7 +19,7 @@
         "react-icons": "^4"
     },
     "devDependencies": {
-        "@cartesi/tsconfig": "workspace:*",
+        "@cartesi/tsconfig": "*",
         "@storybook/addon-essentials": "^7.4.0",
         "@storybook/addon-interactions": "^7.4.0",
         "@storybook/addon-links": "^7.4.0",
