--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "rollups-explorer",
     "version": "0.1.0",
     "private": true,
+    "workspaces": [
+        "apps/*",
+        "packages/*"
+    ],
     "scripts": {
         "build": "turbo run build",
         "dev": "turbo run dev --no-cache --continue",
@@ -13,7 +17,7 @@
         "release": "turbo run build && changeset publish"
     },
     "devDependencies": {
-        "eslint-config-cartesi": "workspace:*",
+        "eslint-config-cartesi": "*",
         "prettier": "^3.0.3",
         "turbo": "^1.10.13",
         "@changesets/cli": "^2.26.2"
@@ -21,5 +25,5 @@
     "engines": {
         "node": ">=18.0.0"
     },
-    "packageManager": "pnpm@8.7.5"
+    "packageManager": "yarn@1.22.19"
 }
