--- a/packages/rollups-wagmi/package.json
+++ b/packages/rollups-wagmi/package.json
@@ -24,13 +24,13 @@
     },
     "devDependencies": {
         "@cartesi/rollups": "^1.0",
-        "@cartesi/tsconfig": "workspace:*",
+        "@cartesi/tsconfig": "*",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "@wagmi/cli": "^1",
         "eslint": "^8",
-        "eslint-config-cartesi": "workspace:*",
+        "eslint-config-cartesi": "*",
         "react": "^18",
         "tsup": "^7",
         "typescript": "^5"
