--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,11 +26,11 @@
         "@mantine/hooks": "^7.0.0-beta.5"
     },
     "devDependencies": {
-        "@cartesi/tsconfig": "workspace:*",
+        "@cartesi/tsconfig": "*",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
-        "eslint-config-cartesi": "workspace:*",
+        "eslint-config-cartesi": "*",
         "react": "^18",
         "tsup": "^7",
         "typescript": "^5"
