--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "devDependencies": {
         "@changesets/cli": "^2.26.2",
         "prettier": "^3.0.3",
-        "turbo": "^1.10.13"
+        "turbo": "^1.10.13",
+        "typescript": "^5"
     },
     "engines": {
         "node": ">=18.0.0"
