--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,15 +5,14 @@
     "scripts": {
         "build": "next build",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
-        "codegen": "run-p codegen:graphql codegen:wagmi",
-        "codegen:graphql": "dotenv -e .env -c -- graphql-codegen",
-        "codegen:wagmi": "wagmi generate",
+        "codegen": "dotenv -e .env -c -- graphql-codegen",
         "dev": "next dev",
         "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
         "@cartesi/rollups-explorer-ui": "*",
+        "@cartesi/rollups-wagmi": "*",
         "@mantine/core": "^7.0.0-beta.5",
         "@mantine/form": "^7.0.0-beta.5",
         "@mantine/hooks": "^7.0.0-beta.5",
