--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -14,9 +14,11 @@
         "@cartesi/rollups-explorer-ui": "*",
         "@mantine/core": "^7.0.0",
         "@mantine/hooks": "^7.0.0",
+        "@rainbow-me/rainbowkit": "^1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-icons": "^4"
+        "react-icons": "^4",
+        "wagmi": "^1"
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
