--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,10 +13,10 @@
     "dependencies": {
         "@cartesi/rollups-explorer-ui": "*",
         "@cartesi/rollups-wagmi": "*",
-        "@mantine/core": "^7.0.0-beta.5",
-        "@mantine/form": "^7.0.0-beta.5",
-        "@mantine/hooks": "^7.0.0-beta.5",
-        "@mantine/notifications": "^7.0.0-beta.5",
+        "@mantine/core": "^7.0.0",
+        "@mantine/form": "^7.0.0",
+        "@mantine/hooks": "^7.0.0",
+        "@mantine/notifications": "^7.0.0",
         "@rainbow-me/rainbowkit": "^1.0.11",
         "@react-spring/web": "^9.7.3",
         "abitype": "^0.9",
