--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,14 +16,14 @@
         "lint": "eslint \"src/**/*.ts*\""
     },
     "dependencies": {
-        "@mantine/core": "^7.0.0-beta.5",
-        "@mantine/hooks": "^7.0.0-beta.5",
+        "@mantine/core": "^7.0.0",
+        "@mantine/hooks": "^7.0.0",
         "@react-spring/web": "^9.7.3",
         "react-icons": "^4"
     },
     "peerDependencies": {
-        "@mantine/core": "^7.0.0-beta.5",
-        "@mantine/hooks": "^7.0.0-beta.5"
+        "@mantine/core": "^7.0.0",
+        "@mantine/hooks": "^7.0.0"
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
