--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,7 +13,9 @@
         "build": "tsup",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "dev": "tsup --watch",
-        "lint": "eslint \"src/**/*.ts*\""
+        "lint": "eslint \"src/**/*.ts*\"",
+        "test": "vitest run",
+        "test:watch": "vitest"
     },
     "dependencies": {
         "@mantine/core": "^7.0.0",
@@ -29,14 +31,18 @@
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
+        "@testing-library/jest-dom": "^6.1.3",
+        "@testing-library/react": "^14.0.0",
         "@types/ramda": "^0.29.3",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
+        "jsdom": "^22.1.0",
         "react": "^18",
         "tsup": "^7",
-        "typescript": "^5"
+        "typescript": "^5",
+        "vitest": "^0.34.5"
     },
     "publishConfig": {
         "access": "public"
