--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "extends": "@cartesi/tsconfig/react-library.json",
-    "include": [".", ".eslintrc.js"],
-    "exclude": ["dist", "build", "node_modules"]
+    "include": [".", ".eslintrc.js", "./vitest-setup.ts"],
+    "exclude": ["dist", "build", "node_modules"],
+    "compilerOptions": {
+        "types": ["vitest/globals"]
+    }
 }
