--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,7 +15,8 @@
         "dev": "tsup --watch",
         "lint": "eslint \"src/**/*.ts*\"",
         "test": "vitest run",
-        "test:watch": "vitest"
+        "test:watch": "vitest",
+        "test:ci": "vitest run --coverage"
     },
     "dependencies": {
         "@mantine/core": "^7.0.0",
@@ -36,6 +37,7 @@
         "@types/ramda": "^0.29.3",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@vitest/coverage-v8": "^0.34.5",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
         "jsdom": "^22.1.0",
