--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "dev": "turbo run dev --no-cache --continue",
         "lint": "turbo run lint",
         "clean": "turbo run clean && rm -rf node_modules",
+        "format:check": "prettier \"**/*.{ts,tsx}\" --check",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
         "test" : "turbo run test",
         "test:ci" : "turbo run test:ci",
@@ -21,7 +22,7 @@
     "devDependencies": {
         "@changesets/cli": "^2.26.2",
         "eslint-config-cartesi": "*",
-        "prettier": "^3.0.3",
+        "prettier": "3.0.3",
         "turbo": "^1.10.13"
     },
     "engines": {
