--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "source.fixAll": true,
         "source.organizeImports": true
     },
+    "typescript.tsdk": "node_modules/typescript/lib",
     "[terraform]": {
         "editor.defaultFormatter": "hashicorp.terraform"
     }
