--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,10 @@
 {
     "$schema": "https://turbo.build/schema.json",
-    "globalEnv": ["NEXT_PUBLIC_CHAIN_ID", "NEXT_PUBLIC_EXPLORER_API_URL"],
+    "globalEnv": [
+        "BASE_PATH",
+        "NEXT_PUBLIC_CHAIN_ID",
+        "NEXT_PUBLIC_EXPLORER_API_URL"
+    ],
     "pipeline": {
         "build": {
             "dependsOn": ["^build", "codegen"],
