Fix .env.sunodo graphql URL

--- a/apps/web/.env.sunodo
+++ b/apps/web/.env.sunodo
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_CHAIN_ID=31337
-NEXT_PUBLIC_EXPLORER_API_URL="http://squid_api:4350/graphql"
+NEXT_PUBLIC_EXPLORER_API_URL="http://localhost:8080/explorer-api/graphql"
 BASE_PATH="/explorer"
