--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: latest
-                  cache: 'yarn'
+                  cache: "yarn"
 
             - name: Install Dependencies
               run: yarn install --frozen-lockfile
