--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,10 @@
         "codegen": "dotenv -e .env -c -- graphql-codegen",
         "dev": "next dev",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:ci": "vitest run --coverage"
     },
     "dependencies": {
         "@cartesi/rollups-explorer-ui": "*",
@@ -48,19 +51,25 @@
         "@graphql-codegen/typescript-urql": "^4",
         "@graphql-typed-document-node/core": "^3",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
+        "@testing-library/jest-dom": "^6.1.3",
+        "@testing-library/react": "^14.0.0",
         "@types/node": "^20",
         "@types/ramda": "^0.29.3",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@vitejs/plugin-react": "^4.1.0",
+        "@vitest/coverage-v8": "0.34.2",
         "@wagmi/cli": "^1",
         "dotenv-cli": "7.3.0",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
+        "jsdom": "22.1.0",
         "npm-run-all": "^4",
         "postcss": "^8",
         "postcss-preset-mantine": "^1.6",
         "postcss-simple-vars": "^7",
         "ts-node": "^10",
-        "typescript": "^5"
+        "typescript": "^5",
+        "vitest": "0.34.2"
     }
 }
