--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,14 +1,16 @@
 {
     "extends": "@cartesi/tsconfig/nextjs.json",
     "compilerOptions": {
-        "plugins": [{ "name": "next" }]
+        "plugins": [{ "name": "next" }],
+        "types": ["vitest/globals"]
     },
     "include": [
         "next-env.d.ts",
         "**/*.ts",
         "**/*.tsx",
         ".next/types/**/*.ts",
-        "postcss.config.js"
+        "postcss.config.js",
+        "./vitest-setup.ts"
     ],
     "exclude": ["node_modules"]
 }
