--- a/packages/rollups-wagmi/package.json
+++ b/packages/rollups-wagmi/package.json
@@ -2,8 +2,9 @@
     "name": "@cartesi/rollups-wagmi",
     "version": "0.0.0",
     "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
+    "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
+    "type": "module",
     "sideEffects": false,
     "license": "Apache-2.0",
     "files": [
@@ -13,7 +14,7 @@
         "build": "tsup",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "codegen": "wagmi generate",
-        "dev": "tsup --watch"        
+        "dev": "tsup --watch"
     },
     "dependencies": {
         "wagmi": "^1"
