--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
         "@graphql-codegen/add": "^5",
         "@graphql-codegen/cli": "^5",
         "@graphql-codegen/client-preset": "^4",
+        "@graphql-codegen/import-types-preset": "^3.0.0",
         "@graphql-codegen/typed-document-node": "^5",
         "@graphql-codegen/typescript": "^4",
         "@graphql-codegen/typescript-operations": "^4",
