refactor: Extend Mantine Other Object interface for type enforce and editor autocomplete

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,6 +5,8 @@
         "types": ["vitest/globals"]
     },
     "include": [
+        "src",
+        "mantine.d.ts",
         "next-env.d.ts",
         "**/*.ts",
         "**/*.tsx",
