refactor: Update turbo task test:ci and remove url exception

--- a/turbo.json
+++ b/turbo.json
@@ -37,7 +37,7 @@
             ]
         },
         "test:ci": {
-            "dependsOn": ["^build"],
+            "dependsOn": ["build"],
             "outputs": ["coverage/**"],
             "inputs": [
                 "src/**/*.ts",
