feat: Add alchemy-provider support.

--- a/apps/web/.env.template
+++ b/apps/web/.env.template
@@ -2,3 +2,4 @@
 # CREATE YOUR OWN .env and use the following environment variables with values as fit
 #NEXT_PUBLIC_CHAIN_ID=1
 #NEXT_PUBLIC_EXPLORER_API_URL=YOUR_SQUID_API_HERE
+#NEXT_PUBLIC_ALCHEMY_API_KEY=YOUR_ALCHEMY_API_KEY
