--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,8 @@
     "globalEnv": [
         "BASE_PATH",
         "NEXT_PUBLIC_CHAIN_ID",
-        "NEXT_PUBLIC_EXPLORER_API_URL"
+        "NEXT_PUBLIC_EXPLORER_API_URL",
+        "NEXT_PUBLIC_ALCHEMY_API_KEY"
     ],
     "pipeline": {
         "build": {
