--- a/turbo.json
+++ b/turbo.json
@@ -38,7 +38,7 @@
             ]
         },
         "test:ci": {
-            "dependsOn": ["^build"],
+            "dependsOn": ["build"],
             "outputs": ["coverage/**"],
             "inputs": [
                 "src/**/*.ts",
