chore: Replace Subsquid API address.

--- a/apps/web/.env.mainnet
+++ b/apps/web/.env.mainnet
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_CHAIN_ID=1
-NEXT_PUBLIC_EXPLORER_API_URL="https://squid.subsquid.io/cartesi-rollups-mainnet/graphql"
+NEXT_PUBLIC_EXPLORER_API_URL="https://mainnet.api.cartesiscan.io/graphql"
