--- a/apps/web/.env.sepolia
+++ b/apps/web/.env.sepolia
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_CHAIN_ID=11155111
-NEXT_PUBLIC_EXPLORER_API_URL="https://squid.subsquid.io/cartesi-rollups-sepolia/graphql"
+NEXT_PUBLIC_EXPLORER_API_URL="https://sepolia.api.cartesiscan.io/graphql"
