--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,7 @@
 {
     "tabWidth": 4,
+    "trailingComma": "all",
+    "bracketSpacing": true,
     "overrides": [
         {
             "files": "*.md",
