chore: Upgrade rainbowkit version on workshop

--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -14,7 +14,7 @@
         "@cartesi/rollups-explorer-ui": "*",
         "@mantine/core": "^7.2.2",
         "@mantine/hooks": "^7.2.2",
-        "@rainbow-me/rainbowkit": "^1",
+        "@rainbow-me/rainbowkit": "1.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4",
