--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,12 @@ jobs:
 
             - name: Run Tests
               run: yarn test:ci
+
+            - name: Merge coveralls reports
+              run: yarn coveralls
+
+            - name: Publish coveralls report
+              uses: coverallsapp/github-action@master
+              with:
+                path-to-lcov: 'coverage/lcov.info'
+                github-token: ${{ secrets.GITHUB_TOKEN }}
