--- a/packages/rollups-wagmi/tsconfig.json
+++ b/packages/rollups-wagmi/tsconfig.json
@@ -1,5 +1,9 @@
 {
     "extends": "@cartesi/tsconfig/react-library.json",
     "include": [".", ".eslintrc.js"],
-    "exclude": ["dist", "build", "node_modules"]
+    "exclude": ["dist", "build", "node_modules"],
+    "compilerOptions": {
+        "resolveJsonModule": true,
+        "esModuleInterop": true
+    }
 }
