--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -12,13 +12,14 @@
     },
     "dependencies": {
         "@cartesi/rollups-explorer-ui": "*",
-        "@mantine/core": "^7.2.2",
-        "@mantine/hooks": "^7.2.2",
+        "@mantine/core": "^7.5.0",
+        "@mantine/hooks": "^7.5.0",
         "@rainbow-me/rainbowkit": "1.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4",
-        "wagmi": "^1"
+        "wagmi": "^1",
+        "serve": "^14.2.1"
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
