chore: Add env vars type declarations for DX.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,6 +6,7 @@
     },
     "include": [
         "src",
+        "additional.d.ts",
         "mantine.d.ts",
         "next-env.d.ts",
         "**/*.ts",
