--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
     "$schema": "https://turbo.build/schema.json",
     "globalEnv": [
+        "INTERNAL_EXPLORER_API_URL",
         "BASE_PATH",
         "NEXT_PUBLIC_CHAIN_ID",
         "NEXT_PUBLIC_EXPLORER_API_URL",
