--- a/apps/web/.env.sunodo
+++ b/apps/web/.env.sunodo
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_CHAIN_ID=31337
 NEXT_PUBLIC_EXPLORER_API_URL="http://localhost:8080/explorer-api/graphql"
+INTERNAL_EXPLORER_API_URL="http://explorer_api:4350/graphql"
 BASE_PATH="/explorer"
