--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,8 +20,9 @@
         "@mantine/form": "^7.5.0",
         "@mantine/hooks": "^7.5.0",
         "@mantine/notifications": "^7.5.0",
-        "@rainbow-me/rainbowkit": "1.2.0",
+        "@rainbow-me/rainbowkit": "2",
         "@react-spring/web": "^9.7.3",
+        "@tanstack/react-query": "^5.27.5",
         "abitype": "^0.9",
         "encoding": "^0.1",
         "graphql": "^16",
@@ -36,8 +37,8 @@
         "react-icons": "^4",
         "react-jazzicon": "^1",
         "urql": "^4",
-        "viem": "^1",
-        "wagmi": "^1"
+        "viem": "^2",
+        "wagmi": "^2"
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
@@ -59,7 +60,7 @@
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.1.0",
         "@vitest/coverage-v8": "0.34.2",
-        "@wagmi/cli": "^1",
+        "@wagmi/cli": "^2",
         "dotenv-cli": "7.3.0",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
