--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,8 +31,9 @@
         "@react-spring/web": "^9.7.3",
         "ramda": "^0.29.0",
         "react-icons": "^4",
-        "viem": "^1",
-        "wagmi": "^1"
+        "@tanstack/react-query": "^5.27.5",
+        "viem": "^2",
+        "wagmi": "^2"
     },
     "peerDependencies": {
         "@mantine/core": "^7.0.0",
