--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -14,11 +14,12 @@
         "@cartesi/rollups-explorer-ui": "*",
         "@mantine/core": "^7.5.0",
         "@mantine/hooks": "^7.5.0",
-        "@rainbow-me/rainbowkit": "1.2.0",
+        "@rainbow-me/rainbowkit": "2",
+        "@tanstack/react-query": "^5.27.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4",
-        "wagmi": "^1",
+        "wagmi": "^2",
         "serve": "^14.2.1"
     },
     "devDependencies": {
