--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "engines": {
         "node": ">=18.0.0"
     },
-    "packageManager": "yarn@1.22.19"
+    "packageManager": "yarn@1.22.19",
+    "resolutions": {
+        "node-gyp-build": "^4.3.0"
+    }
 }
