fixup! chore: Attempt to mitigate issue with building the docker image

--- a/package.json
+++ b/package.json
@@ -30,8 +30,5 @@
     "engines": {
         "node": ">=18.0.0"
     },
-    "packageManager": "yarn@1.22.19",
-    "resolutions": {
-        "node-gyp-build": "^4.3.0"
-    }
+    "packageManager": "yarn@1.22.19"
 }
