chore: Add @mantine/form as dependency.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,7 @@
         "@cartesi/rollups-wagmi": "*",
         "@mantine/core": "^7.7.1",
         "@mantine/hooks": "^7.7.1",
+        "@mantine/form": "^7.7.1",
         "@react-spring/web": "^9.7.3",
         "ramda": "^0.29.0",
         "react-icons": "^4",
@@ -37,6 +38,7 @@
     },
     "peerDependencies": {
         "@mantine/core": "^7.0.0",
+        "@mantine/form": "^7.0.0",
         "@mantine/hooks": "^7.0.0"
     },
     "devDependencies": {
