--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -24,18 +24,18 @@
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
-        "@storybook/addon-essentials": "^7.4.0",
-        "@storybook/addon-interactions": "^7.4.0",
-        "@storybook/addon-links": "^7.4.0",
-        "@storybook/addon-onboarding": "^1.0.8",
-        "@storybook/addon-styling": "^1.3.7",
-        "@storybook/addon-viewport": "^7.4.0",
-        "@storybook/blocks": "^7.4.0",
-        "@storybook/cli": "^7.4.0",
-        "@storybook/preview-api": "^7.4.0",
-        "@storybook/react": "^7.4.0",
-        "@storybook/react-vite": "^7.4.0",
-        "@storybook/testing-library": "^0.2.0",
+        "@storybook/addon-essentials": "^8.0.5",
+        "@storybook/addon-interactions": "^8.0.5",
+        "@storybook/addon-links": "^8.0.5",
+        "@storybook/addon-mdx-gfm": "^8.0.5",
+        "@storybook/addon-onboarding": "^8.0.5",
+        "@storybook/addon-themes": "^8.0.5",
+        "@storybook/addon-viewport": "^8.0.5",
+        "@storybook/blocks": "^8.0.5",
+        "@storybook/cli": "^8.0.5",
+        "@storybook/preview-api": "^8.0.5",
+        "@storybook/react": "^8.0.5",
+        "@storybook/react-vite": "^8.0.5",
         "@types/react": "^18.2.42",
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -45,8 +45,8 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
         "prop-types": "^15.8.1",
-        "storybook": "^7.4.0",
-        "storybook-dark-mode": "^3.0.1",
+        "storybook": "^8.0.5",
+        "storybook-dark-mode": "^4.0.1",
         "typescript": "^5.0.2",
         "vite": "^4.4.5"
     }
