chore: Remove unnecessary HoC and Vitest flag.
After the send-transaction mocks refactoring, the mocks behave as expected, deeming the WagmiProvider HoC and Vitest dangerouslyIgnoreUnhandledErrors flag unnecessary.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
         "lint": "next lint",
         "test": "vitest run",
         "test:watch": "vitest",
-        "test:ci": "vitest run --coverage --dangerouslyIgnoreUnhandledErrors",
+        "test:ci": "vitest run --coverage",
         "test:e2e": "playwright test",
         "test:e2e:ui": "playwright test --ui"
     },
