--- a/packages/decoder/tsconfig.json
+++ b/packages/decoder/tsconfig.json
@@ -1,7 +1,8 @@
 {
+  "exclude": [
+    "dist, node_modules, build"
+  ],
   "compilerOptions": {
-    "target": "es2017",
-    "target": "es2017",
     "target": "es2017",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -13,5 +14,4 @@
     "noEmit": true,
     "strict": true
   },
-  "exclude": ["node_modules"]
 }
