--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
         "@rainbow-me/rainbowkit": "2",
         "@react-spring/web": "^9.7.3",
         "@tanstack/react-query": "^5.27.5",
+        "@vercel/analytics": "^1.2.2",
         "abitype": "^0.9",
         "encoding": "^0.1",
         "graphql": "^16",
