feat: Add new env var to the turbo.json list.

--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,8 @@
         "NEXT_PUBLIC_CHAIN_ID",
         "NEXT_PUBLIC_EXPLORER_API_URL",
         "NEXT_PUBLIC_ALCHEMY_API_KEY",
-        "CI"
+        "CI",
+        "E2E_BASE_URL"
     ],
     "pipeline": {
         "build": {
