--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,7 @@
         "test:watch": "vitest",
         "test:ci": "vitest run --coverage",
         "test:e2e": "playwright test",
-        "test:e2e:ui": "playwright test --ui",
-        "test:e2e:local": "run-s build test:e2e"
+        "test:e2e:ui": "playwright test --ui"
     },
     "dependencies": {
         "@cartesi/rollups-explorer-ui": "*",
