chore: add env variables for whatsabi provider

--- a/apps/web/.env.sepolia
+++ b/apps/web/.env.sepolia
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CHAIN_ID=11155111
 NEXT_PUBLIC_EXPLORER_API_URL="https://sepolia.api.cartesiscan.io/graphql"
+NEXT_PUBLIC_WHATSABI_PROVIDER_CHAIN=11155111
