--- a/apps/web/.env.localhost
+++ b/apps/web/.env.localhost
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CHAIN_ID=31337
 NEXT_PUBLIC_EXPLORER_API_URL="http://127.0.0.1:4350/graphql"
+NEXT_PUBLIC_WHATSABI_PROVIDER_CHAIN=11155111
