--- a/apps/web/.env.mainnet
+++ b/apps/web/.env.mainnet
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CHAIN_ID=1
 NEXT_PUBLIC_EXPLORER_API_URL="https://mainnet.api.cartesiscan.io/graphql"
+NEXT_PUBLIC_WHATSABI_PROVIDER_CHAIN=1
