#183 Add e2e tests for inputs page (#187)
Co-authored-by: Bruno Menezes <brunodmenezes@gmail.com>

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -53,6 +53,7 @@
         "@graphql-codegen/cli": "^5",
         "@graphql-codegen/client-preset": "^4",
         "@graphql-codegen/import-types-preset": "^3.0.0",
+        "@graphql-codegen/named-operations-object": "^3.0.0",
         "@graphql-codegen/typed-document-node": "^5",
         "@graphql-codegen/typescript": "^4",
         "@graphql-codegen/typescript-operations": "^4",
