fixup! fix(workflows): Disable job continuation on error

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,3 +27,7 @@ jobs:
               continue-on-error: false
               env:
                   E2E_BASE_URL: ${{ github.event.deployment_status.environment_url }}
+                  
+            - name: Cancelling parallel jobs
+              if: failure()
+              uses: andymckay/cancel-action@0.2
