--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     },
     "devDependencies": {
         "@changesets/cli": "^2.26.2",
+        "@octokit/auth-action": "^5.1.1",
+        "@octokit/rest": "^21.0.0",
         "eslint-config-cartesi": "*",
         "lcov-result-merger": "4.1.0",
         "prettier": "3.0.3",
