#186 Add input completion status (#198)

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -24,5 +24,12 @@ jobs:
 
             - name: Run e2e tests
               run: yarn test:e2e
+              id: e2e
+              continue-on-error: true
               env:
                   E2E_BASE_URL: ${{ github.event.deployment_status.environment_url }}
+
+            - name: Update check status to the outcome
+              run: yarn node reportGitHubCheckStatus.mjs "End-to-end (${{ github.event.deployment_status.environment }})" ${{ github.sha }} ${{ steps.e2e.outcome }}
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
